--- a/src/modules/playground/playground.scss
+++ b/src/modules/playground/playground.scss
@@ -1,16 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+  @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Space Mono", monospace;
+  font-family: "Courier Prime", monospace;
 
   --adv-primary: #344e41;
   --adv-secondary: #3a5a40;
   --adv-tertiary: #a3b18aff;
   --adv-light: #dad7cdff;
-  --adv-font: "Space Mono", monospace;
+  --adv-font: "Courier Prime", monospace;
 
   /* CSS HEX */
   --timberwolf: #dad7cdff;
@@ -261,5 +261,13 @@ body {
     // border-left: 1px solid #fb6855;
     padding-left: 33px;
     margin-bottom: 25px;
+  }
+
+  .callout {
+    padding: 20px;
+    background: var(--adv-tertiary);
+    color: var(--adv-primary);
+    font-family: var(--adv-font);
+    font-size: 20px;
   }
 }
