--- a/app/playground/page.scss
+++ b/app/playground/page.scss
@@ -1,4 +1,3 @@
-
 html,
 body {
   margin: 0;
@@ -9,9 +8,8 @@ body {
   box-sizing: border-box;
 }
 
-
 .previewBtn {
-  position: absolute; 
+  position: absolute;
   right: 5px;
   top: 10px;
 
@@ -23,4 +21,5 @@ body {
   color: white;
 
   font-family: var(--adv-font);
+  border: 0;
 }
